# Bus-Reservation-System

./: Bus Reservation System.cbp  Bus Reservation System.depend  Bus Reservation System.layout  Bus-Reservation-System.c  Bus-Reservation-System.h  CMakeLists.txt  LICENSE  README.md  admin.c  admin_buscancellation.c  busavailability.c  busbooking.c  buscancellation.c  busfunction.h  choice.c  choicefunction.h  design.c  designfunction.h  login.c  loginfunction.h  main.c  status.c  time_validation.c
Executable Files/: Executable Files - Shortcut.lnk  username-password.txt
database/: busdetails.txt
documentation/: .$bus_reservation_system.drawio.bkp  bus_reservation_system.drawio
src/: clearScreen.c  clearScreen.h  design.c  design.h  directory.c  directory.h  errorHandling.c  errorHandling.h  functionality.c  functionality.h  interface.c  interface.h  key.c  key.h  login.c  login.h  time.c  time.h
